# riag

./: Cargo.toml  LICENSE
src/: bitboard.rs  board.rs  error.rs  fen.rs  lib.rs  magic.rs  main.rs  movegen.rs  piece.rs
src/board/: fen.rs  piece.rs
tests/: perft.rs
